# Oil_Subsidy_Analysis_Project

Ben_Kamen_Oil_Subsidy_Analysis_Project/: Makefile  README.md  pyproject.toml
Ben_Kamen_Oil_Subsidy_Analysis_Project/docs/: mkdocs.yml
Ben_Kamen_Oil_Subsidy_Analysis_Project/final_predictions/: basic_random_forest_predictions.csv  basic_regression_model_predictions.csv  full_random_forest_predictions.csv  full_regression_model_predictions.csv  logistic_regression__predictions_on_testing.csv  random_forest__predictions_on_testing.csv
Ben_Kamen_Oil_Subsidy_Analysis_Project/models/: basic_random_forestNo subsidy.pkl  basic_random_forestPrice Control.pkl  basic_random_forestPrice freezes.pkl  basic_random_forestSome subsidy.pkl  basic_random_forestTax Reduction.pkl  basic_regression_modelNo subsidy.pkl  basic_regression_modelPrice Control.pkl  basic_regression_modelPrice freezes.pkl  basic_regression_modelSome subsidy.pkl  basic_regression_modelTax Reduction.pkl  full_random_forestNo subsidy.pkl  full_random_forestPrice Control.pkl  full_random_forestPrice freezes.pkl  full_random_forestSome subsidy.pkl  full_random_forestTax Reduction.pkl  full_regression_modelNo subsidy.pkl  full_regression_modelPrice Control.pkl  full_regression_modelPrice freezes.pkl  full_regression_modelSome subsidy.pkl  full_regression_modelTax Reduction.pkl
Ben_Kamen_Oil_Subsidy_Analysis_Project/notebooks/: 1.0-bmk-initial-data-exploration.ipynb  1.1-bmk-data-preprocessing.ipynb  1.2-bmk-data-transforming.ipynb  1.3-bmk-model-making.ipynb
(+24 files in other folders)
